(Platonic Solids) Remove FPS - status bar

--- a/projects/src/platonic-solids-application.html
+++ b/projects/src/platonic-solids-application.html
@@ -4,7 +4,7 @@
 <head>
     <title>Platonic Solids</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
         body {
             margin: 0;
@@ -35,7 +35,7 @@
 
     <!-- Libraries of configuration -->
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/OrbitControls.js"></script>
     <script type="text/javascript" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
 
