--- a/index.html
+++ b/index.html
@@ -105,28 +105,28 @@
         </div>
 
         <!-- About Section -->
-        <div class="w3-container w3-padding-32" id="about">
+        <div class="w3-container w3-padding-32" id="about" style="text-align:justify;">
             <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
             <p>Welcome! On this site we will provide links to popular Virtual Reality and Augmented Reality systems and projects developed by students from the UFJF computer science course. Feel free to contact us to suggest improvements and enjoy the content!
             </p>
         </div>
 
         <div class="w3-row-padding w3-grayscale">
-            <div class="w3-col l4 m4 w3-margin-bottom">
+            <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
                 <img src="img/vrtools_rodrigo.jpg" alt="Rodrigo Silva" style="width:100%">
                 <h3>Rodrigo L. S. Silva</h3>
                 <p class="w3-opacity">Coordinator</p>
                 <p>Project coordinator and associate professor at UFJF. His main interests are Augmented Reality, Virtual Reality, Scientific Visualization and Computer Graphics.</p>
                 <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6878718102770367" target="_blank">More info</a></p>
             </div>
-            <div class="w3-col l4 m4 w3-margin-bottom">
+            <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
                 <img src="img/vrtools_lucas.jpg" alt="Lucas da Costa" style="width:100%">
                 <h3>Lucas D. da Costa</h3>
                 <p class="w3-opacity">Developer</p>
-                <p>Graduated in Exact Sciences at UFJF (2014-2019). Computer Science student at UFJF. Currently interested in Virtual Reality and Computer Graphics.</p>
+                <p>Graduated in Exact Sciences at UFJF (2014-2019). Computer Science student at UFJF. Currently interested in Virtual Reality, Augmented Reality and Computer Graphics.</p>
                 <p><a class="w3-button w3-light-grey w3-block" href="http://lattes.cnpq.br/6745472257202199" target="_">More info</a></p>
             </div>
-            <div class="w3-col l4 m4 w3-margin-bottom">
+            <div class="w3-col l4 m4 w3-margin-bottom" style="text-align:justify;">
                 <img src="img/vrtools_paulo.jpg" alt="Paulo Rozatto" style="width:100%">
                 <h3>Paulo Victor de M. Rozatto</h3>
                 <p class="w3-opacity">Developer</p>
