(Platonic Solids) Padronizing the page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="w3-row-padding">
             <div class="w3-col l3 m6 w3-margin-bottom ">
-                <a href="projects/platonic-solids.html" target="_">
+                <a href="projects/platonic-solids.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Platonic Solids</div>
                         <img src="img/platonic-solids/platonic-solids.jpeg" alt="Platonic Solids logo" style="width:100%;">
@@ -95,7 +95,7 @@
                 </a>                
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/solar-system.html" target="_">
+                <a href="projects/solar-system.html">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div class="project-title w3-display-topleft w3-padding">Solar System</div>
                         <img src="img/solar-system/solar-system.png" alt="Solar System logo" style="width:100%;">
