--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -74,12 +74,12 @@
                 <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Quality of the images</h3>
                 <div class="w3-container w3-row">
                     <p>
-                        <a id="" href="./src/solar-system-application.html?quality=0" target="_blank">Medium Quality in fullscreen</a>
+                        <a id="" href="./src/solar-system-application.html?quality=0" target="_blank">Medium Quality in fullscreen <br> on a new tab</a>
                     </p>
                 </div>
                 <div class="w3-container w3-row">
                     <p>
-                        <a id="" href="./src/solar-system-application.html?quality=1" target="_blank">High Quality in fullscreen</a>
+                        <a id="" href="./src/solar-system-application.html?quality=1" target="_blank">High Quality in fullscreen <br> on a new tab</a>
                         <br><b class="w3-small" style="text-align:center;">* Loading could be longer</b>
                     </p>
                 </div>
@@ -87,14 +87,17 @@
             <div class="w3-container w3-cell">
                 <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Other Tools</h3>
                 <p style="text-align:center;">
-                    <a id="" href="./src/solar-system-application-AR.html" target="_blank">Augmented Reality in fullscreen</a>
-                    <br><b class="w3-small" style="text-align:center;">* Authorization is required to use the <br> camera and focus on the
+                    <a id="" href="./src/solar-system-application-AR.html" target="_blank">Augmented Reality in fullscreen <br> on new tab</a>
+                    <br><b class="w3-small" style="text-align:center;">* Authorization is required to use 
+                        the <br> camera and focus on the
                     <a id="" href="./data/markers/hiro.png" style="color: blue" target="_blank">HIRO</a> 
                     marker</b>
                 </p>
                 <p>
-                    <a id="" href="./src/solar-system-application-VR.html" target="_blank">Virtual Reality in fullscreen</a>
-                    <br><b class="w3-small" style="text-align:center;">* Click on VR Button to active <br> Virtual Reality on your device</b>
+                    <a id="" href="./src/solar-system-application-VR.html" target="_blank">Virtual Reality in fullscreen 
+                        <br> on a new tab</a>
+                    <br><b class="w3-small" style="text-align:center;">* Click on VR Button to active <br> 
+                        Virtual Reality on your device</b>
                 </p>
             </div>
         </div>
