--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -61,9 +61,31 @@
                     scene.style.width = getComputedStyle(scene).width;
                     scene.style.height = getComputedStyle(scene).height;
                     scene.setAttribute('scrolling', 'no');
-
                 }
             </script>
+        </div>
+
+        <div class="w3-content w3-display-container w3-center w3-cell-row">
+            <div class="w3-container w3-cell">
+                <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Quality of the images</h3>
+                <div class="w3-container w3-row">
+                    <p>
+                        <a id="" href="./src/platonic-solids-application.html" target="_blank">High Quality in 
+                            fullscreen <br> on a new tab</a>
+                    </p>
+                </div>
+            </div>
+            <div class="w3-container w3-cell">
+                <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Other Tools</h3>
+                <p style="text-align:center;">
+                    <a id="" href="./src/platonic-solids-application-AR.html" target="_blank">Augmented Reality in fullscreen 
+                        <br> on a new tab</a>
+                    <br><b class="w3-small" style="text-align:center;">* Authorization is required to use the 
+                        <br> camera and focus on the
+                    <a id="" href="./data/markers/hiro.png" style="color: blue" target="_blank">HIRO</a> 
+                    marker</b>
+                </p>
+            </div>
         </div>
 
         <div class="w3-container w3-padding-32 ">
@@ -103,7 +125,7 @@
 
         <!-- End page content -->
     </div>
-
+    
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16 ">
         <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank " class="w3-hover-text-green ">w3.css</a></p>
