--- a/projects/src/platonic-solids-application.html
+++ b/projects/src/platonic-solids-application.html
@@ -49,11 +49,12 @@
 
 <body>
 
-    <!-- Open the application on another tab -->
+    <!-- Open the application on another tab 
     <div id="newWindow">
         <p><a id="" href="./platonic-solids-application.html" target="_blank">Open in New Window</a></p>
         <p><a id="" href="./platonic-solids-application-AR.html" target="_blank">Open in Augmented Reality</a></p>
     </div>
+    -->
     <div id="webgl-output"></div>
     <script type="text/javascript">
         (function() {
