(Solar System - VR) FIX: Saturn Ring

--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -135,8 +135,7 @@
             <h5><b>Reference:</b></h5>
             <p><i>Alpha-Element, "Saturn-Ring texture", Web resource: https://www.deviantart.com/alpha-element/art/Stock-Image-Saturn-Rings-393767006 </i></p>            
             <p><i>Solar System Scope, "Solar System textures", Web resource: https://www.solarsystemscope.com/textures/</i></p>
-            <p><i>SOLAR System. In: Wikipedia: a enciclopédia livre. Disponível em: 
-                &#60;https://en.wikipedia.org/wiki/Solar_System&#62; Acesso em: 14 jun 2020.</i></p>
+            <p><i>Owen, T.C. "Solar System." From Encyclopædia Britannica, inc. Web resource https://www.britannica.com/science/solar-system</i></p>
         </div>
 
         <!-- End page content -->
