--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -94,10 +94,10 @@
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="./img/screenshot1.png" onclick="openModal(1)">
-            <img class="slide " src="./img/screenshot2.png " onclick="openModal(2)">
-            <img class="slide " src="./img/screenshot3.png " onclick="openModal(3)">
-            <img class="slide " src="./img/screenshot4.png " onclick="openModal(4)">
+            <img class="slide " src="./img/Platonic-Solids/screenshot1-AR.png" onclick="openModal(1)">
+            <img class="slide " src="./img/Platonic-Solids/screenshot2-AR.png" onclick="openModal(2)">
+            <img class="slide " src="./img/Platonic-Solids/screenshot3-AR.png " onclick="openModal(3)">
+            <img class="slide " src="./img/Platonic-Solids/screenshot4-AR.png" onclick="openModal(4)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
@@ -105,10 +105,10 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/screenshot1.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/screenshot2.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/screenshot3.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/screenshot4.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot1-AR.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot2-AR.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot3-AR.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot4-AR.png" style="height: 100%;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
