--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -53,7 +53,9 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
+
             <iframe id="scene" class="w3-col l8" src="./src/solar-system-application.html" height="400" style="border:2px solid black;"></iframe>
+
             <script>
                 // iOS iframe auto-resize workaround
 
@@ -107,7 +109,6 @@
         </div>
 
         <div class="w3-content w3-display-container w3-center w3-row ">
-
             <img class="slide" src="./img/Solar-System/screenshot1-AR.jpeg" style="border:1px solid black" onclick="openModal(1)">
             <img class="slide" src="./img/Solar-System/screenshot2-AR.jpeg" style="border:1px solid black" onclick="openModal(2)">
             <img class="slide" src="./img/Solar-System/screenshot3-AR.jpeg" style="border:1px solid black" onclick="openModal(3)">
@@ -116,7 +117,7 @@
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
         </div>
 
-        <div id="modal-slideshow-1" class="w3-modal w3-black">
+        <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
                 <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot1-AR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot2-AR.jpeg" style="height: 100%; border:1px solid black">
@@ -133,31 +134,28 @@
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Virtual Reality</h3>
         </div>
 
-        <div class="w3-content w3-display-container w3-center w3-row ">
+        <div class="w3-content w3-display-container w3-center w3-row">
+            <img class="slide2" src="./img/Solar-System/screenshot5-VR.jpeg" style="border:1px solid black" onclick="openModal2(1)">
+            <img class="slide2" src="./img/Solar-System/screenshot6-VR.jpeg" style="border:1px solid black" onclick="openModal2(2)">
+            <img class="slide2" src="./img/Solar-System/screenshot7-VR.jpeg" style="border:1px solid black" onclick="openModal2(3)">
+            <img class="slide2" src="./img/Solar-System/screenshot8-VR.jpeg" style="border:1px solid black" onclick="openModal2(4)">
 
-            <img class="slide" src="./img/Solar-System/screenshot5-VR.jpeg" style="border:1px solid black" onclick="openModal(5)">
-            <img class="slide" src="./img/Solar-System/screenshot6-VR.jpeg" style="border:1px solid black" onclick="openModal(6)">
-            <img class="slide" src="./img/Solar-System/screenshot7-VR.jpeg" style="border:1px solid black" onclick="openModal(7)">
-            <img class="slide" src="./img/Solar-System/screenshot8-VR.jpeg" style="border:1px solid black" onclick="openModal(8)">
-
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
-            <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs2(-1) ">&#10094;</button>
+            <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs2(1) ">&#10095;</button>
         </div>
 
-        <div id="modal-slideshow" class="w3-modal w3-black">
+        <div id="modal-slideshow-2" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot5-VR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot6-VR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot7-VR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot8-VR.jpeg" style="height: 100%; border:1px solid black">
-
-                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
-                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
+                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.jpeg" style="height: 100%; border:1px solid black">
+                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot6-VR.jpeg" style="height: 100%; border:1px solid black">
+                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot7-VR.jpeg" style="height: 100%; border:1px solid black">
+                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot8-VR.jpeg" style="height: 100%; border:1px solid black">
+                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal2(-1)">❮</span>
+                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal2(1)">❯</span>
             </div>
 
-            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
+            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal2()" style="cursor:pointer">×</span>
         </div>
-
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
@@ -171,12 +169,69 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16 ">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank " class="w3-hover-text-green ">w3.css</a></p>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS" target="_blank " class="w3-hover-text-green ">w3.css</a></p>
     </footer>
     <script type="text/javascript" src="../js/script.js"></script>
     <script type="text/javascript">
-        //buildModalArray(["modal-slideshow-1", "modal-slideshow-2"],
-            //            ["slide-1", "slide-2"], ["slide-modal-1", "slide-modal-2"]);
+
+        // To VR -- MODAL IMAGES
+
+        var slideIndex_02 = 1;
+
+        window.addEventListener('resize', () => {
+            showDivs(slideIndex);
+            showDivs2(slideIndex_02);
+        })
+
+        showDivs2(slideIndex_02);
+
+        function plusDivs2(n) {
+            showDivs2(slideIndex_02 += n);
+        }
+
+        function showDivs2(n) {
+            const slide2 = document.getElementsByClassName("slide2");
+            const display2 = window.innerWidth < 1024 ? 'none' : "inline-block";
+
+            if (n > slide2.length) {
+                slideIndex_02 = 1;
+            }
+            if (n < 1) {
+                slideIndex_02 = slide2.length;
+            }
+            for (let i = 0; i < slide2.length; i++) {
+                slide2[i].style.display = display2;
+            }
+            slide2[slideIndex_02 - 1].style.display = "inline-block";
+        }
+
+        function openModal2(n) {
+            document.getElementById("modal-slideshow-2").style.display = "block";
+            showModal2(slideIndex_02 = n);
+        }
+
+        function closeModal2() {
+            document.getElementById("modal-slideshow-2").style.display = "none";
+        }
+
+        function plusModal2(n) {
+            showModal2(slideIndex_02 += n);
+        }
+
+        function showModal2(n) {
+            const slide2 = document.getElementsByClassName("slide-modal-2");
+
+            if (n > slide2.length) {
+                slideIndex_02 = 1;
+            }
+            if (n < 1) {
+                slideIndex_02 = slide2.length;
+            }
+            for (let i = 0; i < slide2.length; i++) {
+                slide2[i].style.display = "none";
+            }
+            slide2[slideIndex_02 - 1].style.display = "block";
+        }
     </script>
 </body>
 
