(Solar System) Big image of virtual reality

--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -120,6 +120,7 @@
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
                 <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot1-AR.jpeg" style="height: 100%; border:1px solid black">
+                
                 <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot2-AR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot3-AR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot4-AR.jpeg" style="height: 100%; border:1px solid black">
@@ -135,21 +136,24 @@
         </div>
 
         <div class="w3-content w3-display-container w3-center w3-row">
-            <img class="slide2" src="./img/Solar-System/screenshot5-VR.jpeg" style="border:1px solid black" onclick="openModal2(1)">
+            <img class="slide2" src="./img/Solar-System/screenshot5-VR.png" style="width: 90%; height: auto; border:1px solid black" onclick="openModal2(1)">
+            <!--
             <img class="slide2" src="./img/Solar-System/screenshot6-VR.jpeg" style="border:1px solid black" onclick="openModal2(2)">
             <img class="slide2" src="./img/Solar-System/screenshot7-VR.jpeg" style="border:1px solid black" onclick="openModal2(3)">
             <img class="slide2" src="./img/Solar-System/screenshot8-VR.jpeg" style="border:1px solid black" onclick="openModal2(4)">
-
+            -->
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs2(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs2(1) ">&#10095;</button>
         </div>
 
         <div id="modal-slideshow-2" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.jpeg" style="height: 100%; border:1px solid black">
+                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.png" style="height: 100%; border:1px solid black">
+            <!--
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot6-VR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot7-VR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot8-VR.jpeg" style="height: 100%; border:1px solid black">
+                -->
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal2(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal2(1)">❯</span>
             </div>
