--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -74,7 +74,7 @@
             <!-- Options buttons -->
             <div class="w3-row-padding w3-black options-buttons-container">
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/platonic-solids-application.html" target="_">
+                    <a href="./src/solar-system-application.html?quality=0" target="_">
                         <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
                             <div class="w3-padding" style="width:100%">
                                 <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/platonic-solids-application.html" target="_">
+                    <a href="./src/solar-system-application.html?quality=1" target="_">
                         <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
                             <div class="w3-padding" style="width:100%">
                                 <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/platonic-solids-application-AR.html" target="_">
+                    <a href="./src/solar-system-application-AR.html" target="_">
                         <div class=" w3-display-container"
                             style="background: url('img/Solar-System/blur-AR.jpg') center;">
                             <div class="w3-padding" style="width:100%">
@@ -108,7 +108,7 @@
                 </div>
 
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/platonic-solids-application-AR.html" target="_">
+                    <a href="./src/solar-system-application-VR.html" target="_">
                         <div class=" w3-display-container"
                             style="background: url('img/Solar-System/blur-VR.jpg') center;">
                             <div class="w3-padding" style="width:100%">
