--- a/projects/house.html
+++ b/projects/house.html
@@ -60,7 +60,7 @@
                     scene.setAttribute('scrolling', 'no');
                 }
             </script>
-            <!-- Options buttons -->
+            <!-- More modes -->
             <div class="w3-row-padding w3-black options-buttons-container">
 
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
@@ -86,7 +86,7 @@
                 </div>
 
             </div>
-            <!-- End of options buttons -->
+            <!-- End of more modes -->
         </div>
 
         <div class="w3-container w3-padding-32 ">
