--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -70,7 +70,7 @@
                     scene.setAttribute('scrolling', 'no');
                 }
             </script>
-            <!-- Options buttons -->
+            <!-- More modes -->
             <div class="w3-row-padding w3-black options-buttons-container">
 
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
@@ -79,7 +79,7 @@
                             style="background: url('img/Platonic-Solids/blur.jpg') center;">
                             <div class="w3-padding" style="width:100%">
                                 <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />High Quality
+                                <br />Fullscreen
                             </div>
                         </div>
                     </a>
@@ -98,7 +98,7 @@
                 </div>
 
             </div>
-            <!-- End of options buttons -->
+            <!-- End of more modes -->
         </div>
 
         <div class="w3-container w3-padding-32 ">
