--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -71,14 +71,14 @@
                 }
             </script>
 
-            <!-- Options buttons -->
+            <!-- More modes -->
             <div class="w3-row-padding w3-black options-buttons-container">
                 <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                     <a href="./src/solar-system-application.html?quality=0" target="_">
                         <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
                             <div class="w3-padding" style="width:100%">
                                 <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />Medium Quality
+                                <br />Fullscreen - Medium Quality
                             </div>
                         </div>
                     </a>
@@ -89,7 +89,7 @@
                         <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
                             <div class="w3-padding" style="width:100%">
                                 <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />High Quality
+                                <br />Fullscreen - High Quality
                             </div>
                         </div>
                     </a>
@@ -120,7 +120,7 @@
                 </div>
 
             </div>
-            <!-- End of options buttons -->
+            <!-- End of more modes-->
         </div>
 
         <div class="w3-container w3-padding-32 ">
