--- a/projects/house.html
+++ b/projects/house.html
@@ -46,7 +46,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l12" src="./src/house-application.html" height="500"
+            <iframe id="scene" class="w3-col l8" src="./src/house-application.html" height="500"
                 style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
@@ -60,34 +60,38 @@
                     scene.setAttribute('scrolling', 'no');
                 }
             </script>
-            <!-- More modes -->
-            <div class="w3-row-padding w3-black options-buttons-container">
-
-                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/house-application.html" target="_">
-                        <div class=" w3-display-container" style="background: url('img/House/blur.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />Fullscreen
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/house-application-AR.html" target="_">
-                        <div class=" w3-display-container" style="background: url('img/House/blur-AR.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
-                                <br />Augmented Reality
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-            </div>
-            <!-- End of more modes -->
         </div>
+
+        <!-- More modes -->
+        <div class="w3-container w3-padding-32 ">
+            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
+        </div>
+        <div class=" w3-row-padding more-modes-container">
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/house-application.html" target="_">
+                    <div class=" w3-display-container" style="background: url('img/House/blur.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />Fullscreen
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/house-application-AR.html" target="_">
+                    <div class=" w3-display-container" style="background: url('img/House/blur-AR.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                            <br />Augmented Reality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <!-- End of more modes -->
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Images in Augmented Reality</h1>
