--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -70,58 +70,60 @@
 
                 }
             </script>
-
-            <!-- More modes -->
-            <div class="w3-row-padding w3-black options-buttons-container">
-                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/solar-system-application.html?quality=0" target="_">
-                        <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />Fullscreen - Medium Quality
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/solar-system-application.html?quality=1" target="_">
-                        <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
-                                <br />Fullscreen - High Quality
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/solar-system-application-AR.html" target="_">
-                        <div class=" w3-display-container"
-                            style="background: url('img/Solar-System/blur-AR.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
-                                <br />Augmented Reality
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                    <a href="./src/solar-system-application-VR.html" target="_">
-                        <div class=" w3-display-container"
-                            style="background: url('img/Solar-System/blur-VR.jpg') center;">
-                            <div class="w3-padding" style="width:100%">
-                                <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
-                                <br />Virtual Reality
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-            </div>
-            <!-- End of more modes-->
         </div>
+
+        <!-- More modes -->
+        <div class="w3-container w3-padding-32 ">
+            <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">More modes</h3>
+        </div>
+
+        <div class="w3-row-padding more-modes-container">
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/solar-system-application.html?quality=0" target="_">
+                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />Fullscreen - Medium Quality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/solar-system-application.html?quality=1" target="_">
+                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                            <br />Fullscreen - High Quality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/solar-system-application-AR.html" target="_">
+                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur-AR.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                            <br />Augmented Reality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                <a href="./src/solar-system-application-VR.html" target="_">
+                    <div class=" w3-display-container" style="background: url('img/Solar-System/blur-VR.jpg') center;">
+                        <div class="w3-padding" style="width:100%">
+                            <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                            <br />Virtual Reality
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+        <!-- End of more modes-->
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Images in Augmented Reality</h3>
