--- a/projects/src/house-application-AR.html
+++ b/projects/src/house-application-AR.html
@@ -26,7 +26,7 @@
     <!-- <script src="../libs/util/dat.gui.js"></script> -->
     <script src="../libs/util/Stats.js"></script>
     <script src="../libs/loaders/GLTFLoader.js"></script>
-    <!-- <script src="../libs/util/loadScreen/LoadScreen.js"></script> -->
+    <script src="../libs/util/loadScreen/LoadScreen.js"></script>
 
     <script type="module" src="house-ar.js"></script>
 </body>
