Renamed House project to Architecture

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="projects/house.html">
+                <a href="projects/architecture.html">
                     <div class="w3-display-container" style="border:2px solid black">
-                        <div class="project-title w3-display-topleft w3-padding">House</div>
-                        <img src="img/house/house.jpg" alt="House" style="width:100%;">
+                        <div class="project-title w3-display-topleft w3-padding">Architecture</div>
+                        <img src="img/architecture/architecture.jpg" alt="House" style="width:100%;">
                     </div>
                 </a>
             </div>
