--- a/projects/src/architecture-AR.html
+++ b/projects/src/architecture-AR.html
@@ -28,7 +28,7 @@
     <script src="../libs/loaders/GLTFLoader.js"></script>
     <script src="../libs/util/loadScreen/LoadScreen.js"></script>
 
-    <script type="module" src="house-ar.js"></script>
+    <script type="module" src="architecture-AR.js"></script>
 </body>
 
 </html>
