--- a/projects/src/architecture-application.html
+++ b/projects/src/architecture-application.html
@@ -49,7 +49,7 @@
 
     </div>
     <div id="stats"></div>
-    <script type="module" src="house.js"></script>
+    <script type="module" src="architecture.js"></script>
 </body>
 
 </html>
