--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>House</title>
+    <title>Architecture</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
@@ -29,7 +29,7 @@
     <div class="w3-content w3-padding " style="max-width:1564px ">
 
         <div class="w3-container w3-padding-32 " id="projects">
-            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">House</h1>
+            <h1 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">Architecture</h1>
         </div>
 
         <div class="w3-container" id="about" style="text-align:justify;">
@@ -46,7 +46,7 @@
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="./src/house-application.html" height="500"
+            <iframe id="scene" class="w3-col l8" src="./src/architecture-application.html" height="500"
                 style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
@@ -69,8 +69,8 @@
         <div class=" w3-row-padding more-modes-container">
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/house-application.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/House/blur.jpg') center;">
+                <a href="./src/architecture-application.html" target="_">
+                    <div class=" w3-display-container" style="background: url('img/Architecture/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />Fullscreen
@@ -80,8 +80,8 @@
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
-                <a href="./src/house-application-AR.html" target="_">
-                    <div class=" w3-display-container" style="background: url('img/House/blur-AR.jpg') center;">
+                <a href="./src/architecture-AR.html" target="_">
+                    <div class=" w3-display-container" style="background: url('img/Architecture/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />Augmented Reality
@@ -99,10 +99,10 @@
 
         <div class="w3-content w3-display-container w3-center w3-row ">
 
-            <img class="slide " src="./img/House/screenshot1-AR.jpg" onclick="openModal(1)">
-            <img class="slide " src="./img/House/screenshot2-AR.jpg" onclick="openModal(2)">
-            <!-- <img class="slide " src="./img/House/screenshot3-AR.jpg " onclick="openModal(3)">
-            <img class="slide " src="./img/House/screenshot4-AR.jpg" onclick="openModal(4)"> -->
+            <img class="slide " src="./img/Architecture/screenshot1-AR.jpg" onclick="openModal(1)">
+            <img class="slide " src="./img/Architecture/screenshot2-AR.jpg" onclick="openModal(2)">
+            <!-- <img class="slide " src="./img/Architecture/screenshot3-AR.jpg " onclick="openModal(3)">
+            <img class="slide " src="./img/Architecture/screenshot4-AR.jpg" onclick="openModal(4)"> -->
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
                 onclick="plusDivs(-1) ">&#10094;</button>
@@ -111,10 +111,12 @@
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/House/screenshot1-AR.jpg" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/House/screenshot2-AR.jpg" style="height: 100%;">
-                <!-- <img class="slide-modal w3-display-middle" src="./img/House/screenshot3-AR.jpg" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/House/screenshot4-AR.jpg" style="height: 100%;"> -->
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot1-AR.jpg"
+                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
+                    style="height: 100%;">
+                <!-- <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot3-AR.jpg" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot4-AR.jpg" style="height: 100%;"> -->
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
